[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoXRD"
version = "0.0.1"
description = "A package for automated XRD analysis"
authors = [
    {name = "Nathan J. Szymanski", email = "nathan_szymanski@berkeley.edu"},
]
dependencies = [
    "numpy",
    "pymatgen",
    "scipy",
    "scikit-image",
    "tensorflow>=2.16",
    "pyxtal",
    "pyts",
    "tqdm",
    "asteval",
    "numexpr>=2.8.3",
]

[project.urls]
Homepage = "https://github.com/njszym/XRD-AutoAnalyzer"

[tool.setuptools]
packages = ["autoXRD"]
